Responsive design ..part 1

--- a/src/pages/css/embla.css
+++ b/src/pages/css/embla.css
@@ -3,6 +3,8 @@
 .embla {
   margin: auto;
   --slide-size: 100%;
+  display: flex;
+  flex-direction: column;
 }
 .embla__viewport {
   overflow: hidden;
